fix: slideshow arrows not showing in mobile

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,3 +1,11 @@
+@media screen and (max-width: 767.98px) {
+  .swiper-actions:not(.show-on-mobile) {
+    display: block;
+    margin: auto
+  }
+}
+
+
 .installment-payment {
   width: 100%;
 }
